<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back_bg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Explore"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginLeft="40dp"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="340dp"
                android:layout_height="55dp"
                android:text="Search Destination"
                android:textSize="14dp"
                android:background="@drawable/search_bg"
                android:paddingLeft="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"/>

            <Button
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ellpise"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="45dp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="88dp"
                android:background="@drawable/card_1"
                android:layout_gravity="center" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="88dp"
                android:background="@drawable/card_2"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"/>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="88dp"
                android:background="@drawable/card_3"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"/>

            <ImageView
                android:layout_width="70dp"
                android:layout_height="88dp"
                android:background="@drawable/card_4"
                android:layout_gravity="center"
                android:layout_marginLeft="12dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Popular"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="30dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="160dp">

            <ImageView
                android:id="@+id/sundorbonImg"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/sundroban" />

            <ImageView
                android:id="@+id/rangamatiImg"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginStart="25dp"
                android:layout_toRightOf="@+id/sundorbonImg"
                android:src="@drawable/rangamati" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sundarban"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="230dp"
                android:layout_marginBottom="10dp"
                android:text="@string/rangamati"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"/>

        </RelativeLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Popular"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginLeft="40dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="160dp">

            <ImageView
                android:id="@+id/bandarbanImg"
                android:layout_width="150dp"
                android:layout_height="175dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/bandarban" />

            <ImageView
                android:id="@+id/saintmartiniImg"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginStart="25dp"
                android:layout_toRightOf="@+id/bandarbanImg"
                android:src="@drawable/saintmartin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="53dp"
                android:layout_marginTop="90dp"
                android:layout_marginBottom="10dp"
                android:text="@string/bandarban"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="230dp"
                android:layout_marginBottom="10dp"
                android:text="@string/saintmartin"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"/>


        </RelativeLayout>

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Popular"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:layout_marginLeft="40dp"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="160dp">

            <ImageView
                android:id="@+id/coxsBazarImg"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginStart="25dp"
                android:src="@drawable/coxsbazar" />

            <ImageView
                android:id="@+id/sajekImg"
                android:layout_width="150dp"
                android:layout_height="200dp"
                android:layout_marginStart="25dp"
                android:layout_toRightOf="@+id/coxsBazarImg"
                android:src="@drawable/sajek" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="53dp"
                android:layout_marginBottom="10dp"
                android:text="@string/coxsbazar"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="90dp"
                android:layout_marginLeft="230dp"
                android:layout_marginBottom="10dp"
                android:text="@string/sajek"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"/>


        </RelativeLayout>
    </LinearLayout>






</ScrollView>